--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="style.css">
     <title>Gestion de sessions de karting</title>
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="SKarting" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="./site.webmanifest" />
 </head>
 <body>
     <header class="app-header">
         <h1>Sessions Karting</h1>
-        <img src="web-app-manifest-192x192.png" alt="logo session karting" height="100px" />
+        <img src="./web-app-manifest-192x192.png" alt="logo session karting" height="100px" />
     </header>
     
     <main class="app-content">
@@ -89,6 +89,6 @@
         <p>&copy; 2024 Karting App</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
